[package]
name = "dfsu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
hex = "0.4.3"
iroh = "0.98.2"
iroh-blobs = "0.100.0"
iroh-tickets = "0.5.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
walkdir = "2.5.0"
tempfile = "3.17.1"
